[CI] Build Qt and wxWidgets

--- a/.github/workflows/linux_build.yml
+++ b/.github/workflows/linux_build.yml
@@ -28,6 +28,9 @@ on:
         required: false
         type: string
         default: ""
+      gui:
+        required: true
+        type: string
 
 jobs:
   build_linux:
@@ -54,7 +57,7 @@ jobs:
         shell: bash
         env:
           OS: linux
-          GUI_FRAMEWORK: QT
+          GUI_FRAMEWORK: ${{ inputs.gui }}
           ARCH: ${{ inputs.platform }}
           SIMD: ''
           EVENT_NAME: ${{ github.event_name }}
@@ -103,7 +106,7 @@ jobs:
         run: .github/workflows/scripts/linux/generate-cmake.sh
 
       - name: QT 6 paths
-        run: sudo ln -s $(find $HOME/Depends/ -name qmake) /usr/bin
+        run: sudo ln -s $HOME/Depends/bin/qmake /usr/bin
 
       - name: Build PCSX2
         working-directory: build
@@ -118,6 +121,7 @@ jobs:
         env:
           PLATFORM: ${{ inputs.platform }}
           COMPILER: ${{ inputs.compiler }}
+          GUI: ${{ inputs.gui }}
           name: ${{ steps.artifact-metadata.outputs.artifact-name }}
         run: .github/workflows/scripts/linux/appimage.sh
 
