--- a/.github/workflows/linux_build_matrix.yml
+++ b/.github/workflows/linux_build_matrix.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build_clang_wx:
-    name: "Clang wxWidgets"
+    name: "Clang"
     uses: ./.github/workflows/linux_build.yml
     with:
       jobName: "wxWidgets"
@@ -21,7 +21,7 @@ jobs:
       buildAppImage: true
     secrets: inherit
   build_clang_qt:
-    name: "Clang Qt"
+    name: "Clang"
     uses: ./.github/workflows/linux_build.yml
     with:
       jobName: "Qt"
